deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memote-webservice-production
spec:
  selector:
    matchLabels:
      app: memote-webservice
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: memote-webservice
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/memote-webservice:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "memote_webservice.wsgi:app"]
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
            memory: "2Gi"
      - name: worker
        image: gcr.io/dd-decaf-cfbf6/memote-webservice:master
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
        command: ["celery", "-A", "memote_webservice.tasks", "worker", "--loglevel=info"]
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "4000m"
            memory: "3Gi"
      - name: flower
        image: gcr.io/dd-decaf-cfbf6/memote-webservice:master
        imagePullPolicy: Always
        ports:
        - containerPort: 5555
        command: ["celery", "flower", "-A", "memote_webservice", "--broker=redis://localhost:6379/0", "--basic_auth=$(FLOWER_USERNAME):$(FLOWER_PASSWORD)"]
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
            memory: "128Mi"
      - name: cache
        image: redis:4.0-alpine
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "2000m"
            memory: "4Gi"
        volumeMounts:
          - mountPath: "/data"
            name: memote-webservice-production
      volumes:
        - name: memote-webservice-production
          persistentVolumeClaim:
           claimName: memote-webservice-production
