deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: memote-webservice-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  tls:
  - hosts:
    - api.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: api.dd-decaf.eu
    http:
      paths:
      - path: /memote-webservice
        backend:
          serviceName: memote-webservice-production
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: memote-webservice-flower-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - flower.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: flower-memote.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: memote-webservice-production
          servicePort: 5555
